Books Type link-text no wrapping Prevents book edition emoji/text from wrapping.

--- a/page.css
+++ b/page.css
@@ -108,6 +108,10 @@ caption {
 thead th:not(:first-child),
 td {
 	text-align: end;
+
+  &:last-of-type a {
+    white-space: nowrap;
+  }
 }
 
 footer {
